--- a/jobs.html
+++ b/jobs.html
@@ -188,35 +188,41 @@
 
                             <label class="d-flex align-items-center">
 
-                                <input type="radio" style="height: 20px!important;" id="last" name="fav_language" value="last">
+                                <input type="radio" style="height: 20px!important;" id="last" name="fav_language"
+                                    value="last">
                                   <label class="ml-5" for="last">Last Hour</label>
 
                             </label>
                             <label class="d-flex align-items-center">
-                                <input type="radio" style="height: 20px!important;" id="last24" name="fav_language" value="last24">
+                                <input type="radio" style="height: 20px!important;" id="last24" name="fav_language"
+                                    value="last24">
                                   <label class="ml-5" for="last24">Last 24 Hour</label>
 
                             </label>
                             <label class="d-flex align-items-center">
 
-                                <input type="radio" style="height: 20px!important;" id="7day" name="fav_language" value="7day">
+                                <input type="radio" style="height: 20px!important;" id="7day" name="fav_language"
+                                    value="7day">
                                   <label class="ml-5" for="7day">Last 7 Days</label>
 
 
                             </label>
                             <label class="d-flex align-items-center">
-                                <input type="radio" style="height: 20px!important;" id="14days" name="fav_language" value="14days">
+                                <input type="radio" style="height: 20px!important;" id="14days" name="fav_language"
+                                    value="14days">
                                   <label class="ml-5" for="14days">Last 14 days</label>
 
                             </label>
                             <label class="d-flex align-items-center">
 
-                                <input type="radio" style="height: 20px!important;" id="30days" name="fav_language" value="20days">
+                                <input type="radio" style="height: 20px!important;" id="30days" name="fav_language"
+                                    value="20days">
                                   <label class="ml-5" for="30days">Last 30 days</label>
 
                             </label>
                             <label class="d-flex align-items-center">
-                                <input type="radio" style="height: 20px!important;" id="All" name="fav_language" value="All">
+                                <input type="radio" style="height: 20px!important;" id="All" name="fav_language"
+                                    value="All">
                                   <label class="ml-5" for="All">All</label>
 
                             </label>
@@ -245,7 +251,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -257,6 +264,8 @@
                             </div>
 
                         </div>
+
+                    </div>    
                         <!-- Accordion card -->
 
                         <!-- Accordion card -->
@@ -277,7 +286,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -309,7 +319,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -341,7 +352,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -373,7 +385,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -405,7 +418,8 @@
                                 data-parent="#accordionEx">
                                 <div class="card-body">
                                     <div class="d-flex">
-                                        <input type="checkbox" style="height : 25px !important" id="scales" name="scales" checked>
+                                        <input type="checkbox" style="height : 25px !important" id="scales"
+                                            name="scales" checked>
                                         <label class="ml-3" for="scales">Scales</label>
                                     </div>
 
@@ -419,7 +433,7 @@
                         </div>
                         <!-- Accordion card -->
 
-                    </div>
+                    
                     <!-- Accordion wrapper -->
 
                 </div>
