--- a/candidate_dashboard.html
+++ b/candidate_dashboard.html
@@ -224,10 +224,10 @@
 
 
 
-                <div class="col-9 job_cards py-2">
+                <div class="col-8 job_cards py-2 mr-2">
 
                     <div class="tab-content container-fluid">
-                        <div class="collapse" id="tab-1">
+                        <div class="collapse show" id="tab-1">
                             <div class="row">
                                 <div class="col-lg-10 details order-2 order-lg-1">
                                     <h1>Wellcome to ~Candidate Name~</h1>
@@ -239,23 +239,42 @@
                                     <img src="Assets/img/candidatePicture/img-not-found.jpg" width=145px
                                         style="border: solid 0.5px rgba(0, 0, 0, 0.075);">
                                 </div>
-                                <div class="col-lg-8 py-5 ml-1 mt-5">
+                                <div class="col-lg-9 py-5 mt-5">
                                     <button type="button" class="btn btn-default"
                                         style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747;">Browse</button>
                                     <p>Max file size is 1MB, Minimum dimension: 270x210 And Suitable files are .jpg &
                                         .png</p>
                                 </div>
                             </div>
+                            
                             <div class="row">
                                 <div class="col-lg-3 py-2 mt-4">
                                     <img src="Assets/img/candidatePicture/img-not-found.jpg" width=145px
                                         style="border: solid 0.5px rgba(0, 0, 0, 0.075);">
                                 </div>
-                                <div class="col-lg-8 py-5 ml-1 mt-3">
+                                <div class="col-lg-9 py-5 mt-3">
                                     <button type="button" class="btn btn-default"
                                         style="width: max-content; font-size: 15px; color: #55A747; border-color: #55A747;">Browse Cover</button>
                                     <p>Max file size is 1MB, Minimum dimension: 270x210 And Suitable files are .jpg &
                                         .png</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12 py-2 mt-4">
+                                    <a> Full Name</a>  
+                               <input type="text" placeholder="Title" style="border: solid 1px #d4d4d4; background-color: #fff;"> 
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-6 py-2">
+                                    <a> Job Title</a>  
+                               <input type="text" placeholder="Job Title" style="border: solid 1px #d4d4d4; background-color: #fff;"> 
+                                </div>
+                                <div class="col-lg-6 py-2">
+                                    <a> Minimum Salary</a>  
+                               <input type="text" placeholder="Minimum Salary" style="border: solid 1px #d4d4d4; background-color: #fff;"> 
                                 </div>
                             </div>
                         </div>
