--- a/candidate_dashboard.html
+++ b/candidate_dashboard.html
@@ -122,7 +122,7 @@
 
                     <div class="row sidebar-tabs mt-2">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fas fa-user"></i>
+                            <i class="fa fa-user"></i>
                             <a data-toggle="collapse" href="#tab-1"> My Profile</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -132,7 +132,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fad fa-file"></i>
+                            <i class="fa fa-file"></i>
                             <a data-toggle="collapse" href="#tab-2"> My Resume</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -142,7 +142,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fas fa-heart"></i>
+                            <i class="fa fa-heart"></i>
                             <a data-toggle="collapse" href="#tab-3"> Shortlisted Jobs</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -152,7 +152,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-briefcase"></i>
+                            <i class="fa fa-briefcase"></i>
                             <a data-toggle="collapse" href="#tab-4"> Applied Jobs</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -162,7 +162,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-bell"></i>
+                            <i class="fa fa-bell"></i>
                             <a data-toggle="collapse" href="#tab-5"> Job Alerts</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -172,7 +172,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-envelope"></i>
+                            <i class="fa fa-envelope"></i>
                             <a data-toggle="collapse" href="#tab-6"> CV & Cover Letter</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -182,7 +182,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-lock"></i>
+                            <i class="fa fa-lock"></i>
                             <a data-toggle="collapse" href="#tab-7"> Change Password</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -192,7 +192,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-tag"></i>
+                            <i class="fa fa-tag"></i>
                             <a data-toggle="collapse" href="#tab-8"> Packages</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -202,7 +202,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-user"></i>
+                            <i class="fa fa-user"></i>
                             <a data-toggle="collapse" href=""> View Profile</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -212,7 +212,7 @@
 
                     <div class="row sidebar-tabs">
                         <div class="col-10 py-2">
-                            <i class="fas fa-sign-out-alt"></i>
+                            <i class="fa fa-sign-out-alt"></i>
                             <a data-toggle="collapse" href=""> Logout</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -442,16 +442,14 @@
                         <div class="collapse" id="tab-2">
                             <div class=" card card-body">
                                 <div class="row">
-                                    <div class="col-lg-10 details order-2 order-lg-1">
-                                        <h3>Et blanditiis nemo veritatis excepturi</h3>
-                                        <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente
-                                            dila
-                                            parde sonata raqer a videna mareta paulona marka</p>
-                                        <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et
-                                            reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et
-                                            velit
-                                            ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna
-                                            desera vafle de nideran pal</p>
+                                    <div class="col-lg-10">
+                                        <h1>MY RESUME</h1>
+                                    </div>
+                                </div>
+    
+                                <div class="row">
+                                    <div class="col-lg-12 mt-2 ">
+                                        <h4 class="new"> <i class="fa fa-graduation-cap" style="color: #1e1f21; margin-inline-end: 10px;"></i>EDUCATION</h4>
                                     </div>
                                 </div>
                             </div>
