--- a/candidate_dashboard.html
+++ b/candidate_dashboard.html
@@ -439,8 +439,7 @@
                         </div>
 
 
-                        <div class="collapse" id="tab-2">
-                            <div class=" card card-body">
+                        <div class="collapse active" id="tab-2">
                                 <div class="row">
                                     <div class="col-lg-10">
                                         <h1>MY RESUME</h1>
@@ -448,11 +447,23 @@
                                 </div>
     
                                 <div class="row">
-                                    <div class="col-lg-12 mt-2 ">
-                                        <h4 class="new"> <i class="fa fa-graduation-cap" style="color: #1e1f21; margin-inline-end: 10px;"></i>EDUCATION</h4>
+                                    <div class="col-lg-12 mt-2 mb-3">
+                                        <h4 class="new"> <i class="fa fa-graduation-cap" style="color: #1e1f21; margin-inline-end: 10px;">
+                                        </i>EDUCATION</h4>
                                     </div>
                                 </div>
-                            </div>
+
+                                <div class="row" style="border-bottom: solid 3px rgba(219, 219, 219, 0.747); height: 50px;">
+                                    <div class="col-lg-5 px-2">
+                                        <p>Qualification</p>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <p>Dates</p>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <p>School/Colleges</p>
+                                    </div>
+                                </div>
                         </div>
                         <div class="collapse" id="tab-3">
                             <div class=" card card-body">
