--- a/candidate_dashboard.html
+++ b/candidate_dashboard.html
@@ -121,7 +121,7 @@
 
                     <div class="row sidebar-tabs my-2 mt-2">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fa fa-user"></i>
+                            <i class="fas fa-user"></i>
                             <a data-toggle="collapse" href="#tab-1"> My Profile</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -131,24 +131,24 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fa fa-file"></i>
+                            <i class="fas fa-file"></i>
                             <a data-toggle="collapse" href="#tab-2"> My Resume</a>
                         </div>
                         <div class="col-2 pt-2">
                             <span class="fas fa-chevron-right"></span>
                         </div>
-                        <!-- <ul class="collapse" id="myResume">
+                        <ul class="collapse" id="myResume">
                             <li>Education</li>
                             <li data-target="#EXPERIANCE">Experiance</li>
                             <li>Portfolio</li>
                             <li>Skills</li>
                             <li>Honors Award</li>
-                        </ul> -->
+                        </ul> 
                     </div>
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2 nav-item">
-                            <i class="fa fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                             <a data-toggle="collapse" href="#tab-3"> Shortlisted Jobs</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -158,7 +158,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-briefcase"></i>
+                            <i class="fas fa-briefcase"></i>
                             <a data-toggle="collapse" href="#tab-4"> Applied Jobs</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -168,7 +168,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-bell"></i>
+                            <i class="fas fa-bell"></i>
                             <a data-toggle="collapse" href="#tab-5"> Job Alerts</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -178,7 +178,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-envelope"></i>
+                            <i class="fas fa-envelope"></i>
                             <a data-toggle="collapse" href="#tab-6"> CV & Cover Letter</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -188,7 +188,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-lock"></i>
+                            <i class="fas fa-lock"></i>
                             <a data-toggle="collapse" href="#tab-7"> Change Password</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -198,7 +198,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-tag"></i>
+                            <i class="fas fa-tag"></i>
                             <a data-toggle="collapse" href="#tab-8"> Packages</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -208,7 +208,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-user"></i>
+                            <i class="fas fa-user"></i>
                             <a data-toggle="collapse" href=""> View Profile</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -218,7 +218,7 @@
 
                     <div class="row sidebar-tabs my-2">
                         <div class="col-10 py-2">
-                            <i class="fa fa-sign-out-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
                             <a data-toggle="collapse" href=""> Logout</a>
                         </div>
                         <div class="col-2 pt-2">
@@ -1188,6 +1188,23 @@
                         </div>
 
                         <div class="collapse mb-5" id="tab-8">
+                            <div class="row">
+                                <div class="col-lg-10">
+                                    <h1>
+                                        PACKAGES
+                                    </h1>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12 mt-1">
+                                    <p> There is no package in your list. </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="collapse mb-5" id="tab-9">
                             <div class="row">
                                 <div class="col-lg-10">
                                     <h1>
